Add nice-to-have UX refactors: I3 (dueDate validation), I5 (CORS from properties)